--- a/ALU.qsf
+++ b/ALU.qsf
@@ -53,4 +53,17 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH ALU -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME ALU -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ALU
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ALU -section_id ALU
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name VHDL_TEST_BENCH_FILE simulation/modelsim/ALU.vht
+set_global_assignment -name EDA_TEST_BENCH_FILE ALU.vhd -section_id ALU
+set_global_assignment -name EDA_TEST_BENCH_NAME ALU2 -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ALU2
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ALU2 -section_id ALU2
+set_global_assignment -name EDA_TEST_BENCH_FILE ALU.vhd -section_id ALU2
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
